<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemandeurActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Veuillez Remplir le formulaire svp "
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/purple_500"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nomParam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/nomStr"
            android:textSize="20dp"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prenomParam"
            android:hint="@string/prenomStr"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ageParam"
            android:layout_marginTop="20dp"
            android:hint="@string/ageInt"
            android:textSize="20dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addresseParam"
            android:layout_marginTop="20dp"
            android:hint="@string/addresseStr"
            android:textSize="20dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailParam"
            android:layout_marginTop="20dp"
            android:hint="@string/emailStr"
            android:textSize="20dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/telephoneParam"
            android:layout_marginTop="20dp"
            android:hint="@string/telephoneStr"
            android:textSize="20dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/specialiteParam"
            android:layout_marginTop="20dp"
            android:hint="@string/specialiteStr"
            android:textSize="20dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/niveauParam"
            android:layout_marginTop="20dp"
            android:hint="@string/niveauStr"
            android:textSize="20dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/experienceParam"
            android:layout_marginTop="20dp"
            android:hint="@string/experienceStr"
            android:textSize="20dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:id="@+id/submitParam"
            android:layout_marginTop="50dp"
            />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>